2011-04-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Fixed flash
	area colors and lef margin in horizontal bar
	graphs

2011-04-18  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Added homedir to area graphs
	Fixed margins of bar graphs
	Fixed horizontal flash graphs

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/functions_fsgraph.php
	include/graphs/fgraph.php: Merged from miguel works
	url home pass to abstraction to call files correctly.
	Increased line weights into line graphs

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/fgraph.php: Merged changes from 
	miguel works in Pandora like checks, margins in
	the graphs, etc.

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/graphs/pChart/pDraw.class.php: Added the angle of
	top axis into bar graphs of pchart.
	Fixed position of pie charts legend

2011-04-14  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/fgraph.php: Added x and y axis name possibility
	to line, stacked line and stacked area graphs

2011-04-13  Sancho Lerena <slerena@artica.es>

	* include/styles/integria.css: Fixed a lot problems with IE :(

	* include/integria_cron.php: Tab.

	* godmode/setup/filemgr.php: Added repository for filereleases.

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_gd.php
	include/graphs/fgraph.php: Enabled dual way to
	call gd graphics: through url and thorugh call 
	to function

2011-04-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Restored Miguel
	code erased by me in the last commit and improved the