@@ -1,3 +1,13 @@
+2011-04-20  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_xmlrpc.php: Compact the input
+	data from audit agent mergin large periods of
+	the same activity
+	
+	* include/graphs/functions_fsgraph.php
+	include/graphs/fgraph.php: Merged the latest 
+	changes of miguel works on pandora
+
 2011-04-18  Sergio Martin <sergio.martin@artica.es>
 
 	* include/graphs/functions_pchart.php
